Update 4. Configure SLA.md

--- a/4. Configure SLA.md
+++ b/4. Configure SLA.md
@@ -1,3 +1,5 @@
+### This configuration sets up IP SLA (Service-Level Agreement) tracking to monitor connectivity to a next-hop IP (10.0.1.2) and dynamically adjust the routing table based on the results.
+
 ```
 ip sla 1
 icmp-echo 10.0.1.2
@@ -9,3 +11,24 @@ no ip route 0.0.0.0 0.0.0.0 10.0.1.2
 ip route 0.0.0.0 0.0.0.0 10.0.1.2 track 1
 track 1 ip sla 1
 ```
+---
+
+### Purpose
+- Monitors the availability of the next-hop IP (10.0.1.2).
+- Automatically removes the default route if 10.0.1.2 becomes unreachable.
+- Useful for dynamic failover in static routing scenarios.
+
+---
+
+### Verification Commands
+![image](https://github.com/user-attachments/assets/460de88e-4bca-4b8f-b813-46783df13caa)
+
+```
+show ip sla statistics
+```
+![image](https://github.com/user-attachments/assets/6e257010-80eb-48c2-ab1c-b3fc59f68ad1)
+
+```
+show track
+```
+
